feat: añadiendo más comandos y mensajes de ayuda

--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,9 @@
             "": "src/"
         }
     },
+    "scripts": {
+        "pu": "./vendor/bin/phpunit "
+    },
     "require-dev": {
         "phpunit/phpunit": "^9.5"
     }
